welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var vuBiscuit : Boolean = false


def haveBaggle():Boolean = {
  
    for (i <- 1 to 6){
      avance()
      if (estSurBiscuit==true){
        vuBiscuit=true    // avance de 6  et fait la v?rife
      }
    recule(6)
      
    if (vuBiscuit==true){
      return true      // arrete le programme si on a vu un biscuit
    }
    else {
      return false
    }
    
}
